<resources>
    <string name="app_name">OctoNote
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">Not  Bulunmamakta</string>
    <string name="title">Başlık</string>
    <string name="description">Açıklama</string>
    <string name="search">Ara</string>
    <string name="sort_by">Sırala</string>
    <string name="priority_high">Yüksek Öncelik</string>
    <string name="priority_low">Düşük Öncelik</string>
    <string name="delete_all">Tüm Notları Sil</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="ascending">Artan</string>
    <string name="descending">Azalan</string>
    <string name="octo">Octo  Note</string>


    <string name="detail_prefix">Words That Start With</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="look_up_word">Look up word in a Browser Search</string>
    <string name="look_up_words">Show Stored Words</string>
    <string name="word_list_fragment_label">Words That Start With {letter}</string>


    <string-array name="priorities">
        <item>Yüksek Öncelik</item>
        <item>Orta Öncelik</item>
        <item>Düşük Öncelik</item>
    </string-array>




    //Profile Fragment
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
</resources>