<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by"
            android:icon="@drawable/ic_slider_filter"
            app:iconTint="@color/white"
            app:showAsAction="always"
            >
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high"
                    android:icon="@drawable/ic_upward_24"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"
                    android:icon="@drawable/ic_downward"/>
                <item
                    android:id="@+id/alpha_up"
                    android:title="@string/ascending"
                    android:icon="@drawable/ic_alpha_up"/>
                <item
                    android:id="@+id/alpha_down"
                    android:title="@string/descending"
                    android:icon="@drawable/ic_alpha_down"/>
            </menu>
        </item>
    </group>



    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_delete"
        app:iconTint="@color/white"
        app:showAsAction="always"/>

</menu>